// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders props when passed in 1`] = `
<text
  className="sc-bdVaJa ckfnTm"
  fontSize="80%"
>
  MOAR TEXT
</text>
`;

exports[`renders successfully 1`] = `
<text
  className="sc-bdVaJa fyjRRC"
  fontSize="100%"
/>
`;

exports[`renders text when passed in successfully 1`] = `
<text
  className="sc-bdVaJa fyjRRC"
  fontSize="100%"
>
  Here's some centered text
</text>
`;
